Cache page views

--- a/front/index.html
+++ b/front/index.html
@@ -37,7 +37,7 @@
     <script src="cdn/underscore-min.js"></script>
     <script src="cdn/jquery-1.11.2.min.js"></script>
     <script src="cdn/backbone-min.js"></script>
-    <script src="cdn/bootstrap.min.js"></script>
+    <!--<script src="cdn/bootstrap.min.js"></script>-->
     <script src="cdn/bootstrap-datepicker.js"></script>
     <script src="{{url_for('static', filename='javascripts/bundle.js')}}"></script>
 </body>
@@ -71,6 +71,13 @@
 
 <script type="text/template" id="rme_email">
   <h1>Give me your email bro</h1>
+</script>
+
+<script type="text/template" id="about_panel">
+  <p>
+      Hey, im Zozor. Check out my github <a href="http://github.com/emilecaron">here</a>!
+  </p>
+  <p>This app was built using <a href="http://flask.pocoo.org/">Flask</a>, <a href="http://backbonejs.org/">Backbone</a>, <a href="http://getbootstrap.com/">Bootstrap</a> and more.</p>
 </script>
 
 <!--
