--- a/front/index.html
+++ b/front/index.html
@@ -42,7 +42,8 @@
     <script src="{{url_for('static', filename='javascripts/bundle.js')}}"></script>
 </body>
 
-<!-- Templates -->
+<!-- TEMPLATES -->
+<!-- Header -->
 <script type="text/template" id="header-template">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -59,7 +60,8 @@
 
 <!-- Pannels -->
 <script type="text/template" id="rme_welcome">
-  <h1>Do you like it when your GF is on her periods?</h1>
+  <!--<h1>Do you like it when your GF is on her periods?</h1>-->
+  <h1>Do you like it when <blank> ?</h1>
   <button id="yes_button">Yes</button>
   <button id="no_button">No</button>
 </script>
